# mcp-mocks

./: .env  .gitignore  Dockerfile  app.py  client.py  mcpPrompts.py  mcpServer.py  pyproject.toml
dataModels/: __init__.py  apiInputs.py  baseInput.py
llmApi/: __init__.py  llmapi.py
serverSetup/: __init__.py  coordinator.py  inputOutputFields.py  mcpPrompts.py  mcpServer.py  mcpTool.py
serverSetup.py/: __init__.py  app.py  mcpHost.py  mcpServer.py  mcpTool.py
