[project]
name = "mcp-mocks"
version = "0.1.0"
description = ""
authors = [
    {name = "lord-fourth0107",email = "shivamsinghnitr123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "fastmcp (>=2.10.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
