[tool.poetry]
name = "mcp-mocks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "mcp_mocks" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = "^0.29"
requests = "^2.32"
fastmcp = { git = "https://github.com/jlowin/fastmcp.git" }
loguru = "^0.7.3"
ollama = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
